@@ -19,10 +19,11 @@ class Figure(images.Figure):
 
     def run(self):
         name = self.options.pop('name', None)
-        (figure_node,) = images.Figure.run(self)
-        if isinstance(figure_node, nodes.system_message):
-            return [figure_node]
+        result = images.Figure.run(self)
+        if len(result) == 2 or isinstance(result[0], nodes.system_message):
+            return result
 
+        (figure_node,) = result
         if name:
             self.options['name'] = name
             self.add_name(figure_node)
